--- a/index-test.html
+++ b/index-test.html
@@ -10,7 +10,7 @@
     <!-- with Playfair Display
     <link href="https://fonts.googleapis.com/css?family=Cabin:500|PT+Serif|Playfair+Display:400,400i" rel="stylesheet">
   -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/updated-styles.css">
   </head>
 
   <body>
